# calypso-anemometer

./: .gitignore  CHANGES.rst  MANIFEST.in  Makefile  README.rst  calypso.py  pyproject.toml  requirements-utils.txt  setup.py
.github/workflows/: tests.yml
calypso_anemometer/: cli.py  core.py  engine.py  exception.py  fake.py  model.py  util.py
calypso_anemometer/telemetry/: __init__.py  adapter.py  common.py  model.py  network.py  nmea0183.py  signalk.py
doc/: backlog.rst  preflight.rst  production.rst  sandbox.rst  troubleshooting.rst
examples/: calypso_read.py  calypso_subscribe.py  calypso_telemetry_nmea0183.py  calypso_telemetry_signalk.py
testing/: conf.py  conftest.py  data.py  test_cli.py  test_core_connect.py  test_core_discovery.py  test_core_info_status.py  test_core_misc.py  test_core_reading.py  test_core_write.py  test_decode_data.py  test_engine.py  test_examples.py  test_fake.py  test_model.py  test_telemetry.py  test_util.py
